// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon #className 1`] = `
<Fragment>
  <svg
    aria-hidden="true"
    className="icon icon-test u-test"
  >
    <use
      href="#icon-test"
    />
  </svg>
</Fragment>
`;

exports[`Icon #name 1`] = `
<Fragment>
  <svg
    aria-hidden="true"
    className="icon icon-test "
  >
    <use
      href="#icon-test"
    />
  </svg>
</Fragment>
`;

exports[`Icon #svgPath 1`] = `
<Fragment>
  <svg
    aria-hidden="true"
    className="icon icon-exampleIcon "
  >
    <path
      d="M10 30 L20 10 L30 30 L40 30 L50 10 L60 30"
    />
  </svg>
</Fragment>
`;

exports[`Icon #title 1`] = `
<Fragment>
  <svg
    aria-hidden="true"
    className="icon icon-test "
  >
    <use
      href="#icon-test"
    />
  </svg>
  <span
    className="visuallyhidden"
  >
    Test title
  </span>
</Fragment>
`;
